--- a/cv-julian-ferrato.html
+++ b/cv-julian-ferrato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF=8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mon-cv</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="cv-julian-ferrato.css">
 </head>
 <body>
 <!-- Informations personnelles -->
